# lucius-mcp

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_MCPB.md  SECURITY.md  manifest.json  openapi-generator-config.yaml  pyproject.toml  server.json
.ci/act/: act.vars.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _cli_build_test.yml  _docker_build_push.yml  _mcpb_build.yml  _pages_build_deploy.yml  _python_check.yml  cli-build.yml  dependabot-combine-prs.yml  e2e-tests.yml  pages-manual.yml  pr-quality-gate.yml  release.yml
.openapi-generator/: FILES
deployment/: Dockerfile
deployment/completions/: lucius.bash  lucius.fish  lucius.ps1  lucius.zsh
deployment/mcpb/: manifest.python.json  manifest.uv.json
deployment/scripts/: build-mcpb.sh  build_all_cli.sh  build_cli_linux_arm64.sh  build_cli_linux_x86_64.sh  build_cli_macos_arm64.sh  build_cli_macos_x86_64.sh  build_cli_unix.sh  build_cli_windows.bat  build_cli_windows_arm64.bat  build_cli_windows_x86_64.bat  generate_completions.py  update_mcp_registry_metadata.py  update_mcpb_hashes.py  validate_mcpb.py  verify_mcpb_bundles.py
deployment/shell-completions/: lucius.bash  lucius.fish  lucius.ps1  lucius.zsh
docs/: CLI.md  agent-documentation-protocol.md  architecture.md  development.md  index.md  mcp-registry.html  mcp_manifest.json  setup.md  telemetry.md  tools.md
examples/: create_test_case.json  search_test_cases_aql_basic.json  search_test_cases_aql_complex.json  search_test_cases_combined.json  search_test_cases_simple.json  search_test_cases_tags.json
openapi/allure-testops-service/: filtered-report-service.json  report-service.json
scripts/: build_all_cli.sh  build_tool_schema.py  filter_openapi.py  fix_generated_imports.py  full-test-suite.sh  generate_models.sh  pre_commit_sync_mcp_manifest.sh  prepare-release.md  release-preparation.md  update-changelog.md
specs/: architecture.md  prd.md  project-context.md  test-design-epic-1.md  test-design-story-1.2.md
specs/implementation-artifacts/: 1-1-project-initialization-and-core-architecture.md  1-2-generated-client-and-data-models.md  1-3-comprehensive-test-case-creation-tool.md  1-4-idempotent-update-and-maintenance.md  1-5-soft-delete-and-archive.md  1-6-comprehensive-end-to-end-tests.md  1-7-tool-error-hints-and-validation-feedback.md  10-1-include-testops-entity-urls-in-tool-responses.md  10-2-manual-test-execution-inside-launches.md  2-1-create-and-list-shared-steps.md  2-2-update-and-delete-shared-steps.md  2-3-link-shared-step-to-test-case.md  2026-02-05-idempotent_deletion_fix_plan.md  2026-02-05-idempotent_deletion_fix_walkthrough.md  3-1-list-test-cases-by-project.md  3-10-add-test-test_layers-handling-in-update_test_case-tool.md  3-11-crud-custom-field-values.md  3-12-support-issue-links-in-test-cases.md  3-13-integration-filtering-for-issue-links.md  3-2-retrieve-full-test-case-details.md  3-3-search-test-cases-by-name-or-tag.md  3-4-runtime-authentication-override.md  3-5-create-test-case-aggregate-missing-fields.md  3-6-get-custom-fields-with-values.md  3-7-crud-test-layers.md  3-8-manage-test-case-custom-fields.md  4-5-set-up-act.md  (+44 more)
src/: main.py  version.py
tests/: README.md  conftest.py
(+229 files in other folders)
