[project]
name = "lucius-mcp"
version = "0.1.0"
description = "Allure TestOps MCP Server"
readme = "README.md"
authors = [{ name = "Ivan Ostanin" }]
requires-python = ">=3.14"
dependencies = [
    "fastmcp<3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
    "wsproto>=1.3.2",
]

[project.scripts]
lucius-mcp = "src.main:start"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[project.optional-dependencies]
dev = [
    "allure-pytest>=2.15.2",
    "faker>=40.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "S", "C90", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.13"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
